# test-git-actions

./: .gitignore  Dockerfile  Makefile  action.yaml  entrypoint.sh  main.py  pyproject.toml  renovate.json
.github/workflows/: hello.yml
